--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinCampusConnect"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".NewsApplication"
+        >
         <activity
             android:name=".ui.NewsActivity"
             android:exported="false" />
